# bromide

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  proxy.py
bromide/: Cargo.toml
bromide/migrations/: 20240106182927_accounts.up.sql  20240109171046_users.up.sql
bromide/src/: error.rs  main.rs  state.rs
bromide/src/routes/: accounts.rs  miscellaneous.rs  mod.rs
migrations/: 1-accounts.sql  1_accounts.sql  2-users.sql  20240106182927_accounts.up.sql  20240109171046_users.up.sql  20240118184020_account_comments.down.sql  20240118184020_account_comments.up.sql  2_users.sql
response_error/: Cargo.toml
response_error/src/: lib.rs
src/: config.rs  error.rs  form.rs  lib.rs  main.rs  router.rs  schema.rs  state.rs  utils.rs
src/forms/: accounts.rs  comments.rs  miscellaneous.rs  mod.rs  users.rs
src/router/: accounts.rs  mod.rs  users.rs
src/routes/: accounts.rs  comments.rs  miscellaneous.rs  mod.rs  users.rs
src/schema/: accounts.rs  mod.rs  users.rs
tests/: accounts.rs  common.rs
tests/fixtures/: accounts.sql  users.sql
