[package]
name = "bromide"
version = "0.1.0"
authors = ["Deathlesz"]
edition = "2021"
description = "A server software reimplementation for a certain platformer."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "tower-log", "tracing"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
thiserror = "1"
argon2 = "0.5"
sha1_smol = { version = "1", features = ["std"] }
email_address = "0.2"
serde_urlencoded = "0.7"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
