[package]
name = "bromide"
version = "0.1.0"
authors = ["Deathlesz"]
edition = "2021"
description = "A server software reimplementation for a certain platformer."
readme = "../README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
email_address = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha1_smol = { version = "1.0", features = ["std"] }
sqlx = { version = "0.7", features = ["macros", "sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
response_error = { path = "../response_error" }