[package]
name = "response_error"
version = "0.1.0"
authors = ["Deathlesz"]
edition = "2021"
description = "Utility macros for reducing error boilerplate"
readme = "../README.md"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
